--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,8 +1,8 @@
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+{% extends 'base.html' %}
+{% block content %}
+
 <br/>
-<h1>Welcome to Home Page <span style="color: skyblue;">{{name}}</span></h1>
+<h1>Welcome to Home Page, <span style="color: skyblue;">Sebastian Salazar</span></h1>
 
 <div class="container">
     <form action="">
@@ -15,22 +15,34 @@
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
     <p>Searching for {{searchTerm}}</p>
+    
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies%}
         <div v-for="movie in movies" class="col">
             <div class="card">
-                <img class="card-img-top" src="{{ movie.image.url}}">
+                <img src="{{ movie.image.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title fw-bold"> {{ movie.title }}</h5>
-                    <p class="card-text">{{ movie.description}}</p>
+                    <h5 class="card-title fw-bold"> {{ movie.title }} </h5>
+                    <p class="card-text"> {{ movie.description }} </p>
                     {% if movie.url %}
-                        <a href="{{ movie.url}}" class="btn btn-primary"> Movie Link</a>
+                        <a href="{{ movie.url }}" class="btn btn-primary"> Movie Link</a>
                     {% endif %}
                 </div>
             </div>
         </div>
+    </div>
         {% endfor %}
     </div>
     <br/>
-    <br/>
+    <br/>  
+    <br/>  
+    <h2>Join our mailing list:</h2>
+    <form action="{% url 'signup' %}">
+        <div class="mb-3">
+            <label for="email" class="form-label"> Enter your email: </label>
+            <input type="email" class="form-control" name="email"/>
+        </div>
+        <button type="submit" class="btn btn-primary"> Sign up </button>
+    </form>  
 </div>
+{% endblock content %}     
